terminada funcion para publicar lista

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <p>Deberas obtener la lista de asistencia usando la API ubicada en <a href="http://laboratoria.cuadra.co:9339/api/v1/students/">http://laboratoria.cuadra.co:9339/api/v1/students/</a> y agregarle estilos con SASS</p>
 
             <h4>Asistencia: </h4>
-            <table id="lista">
+            <table>
                 <thead>
                     <th>No. Lista</th>
                     <th>Nombre</th>
                     <th>Asistencia</th>
                 </thead>
-                <tbody id="alumnas">
+                <tbody id="alumnList">
                     <tr>
                         <td>0</td>
                         <td>Alumna </td>
